# mtatabase

./: .gitignore  ERD.dbml  ERD.dbml.layout.json  README.md  badids.txt  main.py  pyproject.toml
gtfs/gtfs_test/: trips.txt
src/: database.py  databases.py  gtfs_script.py  loggedtrips.py  mergedata.py  mtatabase.py  realtime_files.py  schedule.py  utils.py
src/subway_package/: __init__.py
