[project]
name = "subway-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pacmanboss256", email = "pacmanboss972@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "sodapy>=2.2.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
